k8s/apps/oekaki-dengon-game/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oekaki-dengon-game-front
    app.kubernetes.io/name: oekaki-dengon-game-front
  name: oekaki-dengon-game-front
  namespace: oekaki-dengon-game
spec:
  selector:
    matchLabels:
      app: oekaki-dengon-game-front
      app.kubernetes.io/name: oekaki-dengon-game-front
  template:
    metadata:
      labels:
        app: oekaki-dengon-game-front
        app.kubernetes.io/name: oekaki-dengon-game-front
    spec:
      containers:
        - env:
            - name: API_URL
              value: http://oekaki-dengon-game-back.oekaki-dengon-game.svc.cluster.local:8080/api
          image: ghcr.io/kmc-jp/oekaki-dengon-game-front:v0.0.0-10b57aae4bfe56124907ac1b03bc822a635e173f-95@sha256:a80062b5c5069a62fbc181f70e9897cc2cbfcab3fd625b1e4438dfe9b93906ef
          imagePullPolicy: IfNotPresent
          name: oekaki-dengon-game-front
          ports:
            - containerPort: 3000
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: RestartContainer
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
      nodeSelector:
        kubernetes.io/arch: amd64
