k8s/apps/oekaki-dengon-game/front/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: oekaki-dengon-game-front
    app.kubernetes.io/name: oekaki-dengon-game-front
  name: oekaki-dengon-game-front
  namespace: oekaki-dengon-game
spec:
  egress:
    - ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.default
              app.kubernetes.io/name: default-collector
    - ports:
        - port: 8080
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: oekaki-dengon-game-back
              app.kubernetes.io/name: oekaki-dengon-game-back
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: oekaki-dengon-game-front
      app.kubernetes.io/name: oekaki-dengon-game-front
  policyTypes:
    - Ingress
    - Egress
